--- a/views/about.html
+++ b/views/about.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nodeJS Tutorial</title>
+    <title>About</title>
 </head>
 <body>
-    <h1>Rizvi Rahman Omee</h1>
-    <p>Currently learning nodeJS for starting career in web development field. Hope I can gather enough knowledge very soon. Wish me luck!!!</p>
+    <h1>About</h1>
+    <p>About page</p>
     <nav>
         <a href="/">Homepage</a>
         <a href="/about">About page</a>
     </nav>
+    
 </body>
 </html>
